src/objects/Milestone__c.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Developing_cost__c</fullName>
        <label>Developing cost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_date__c</fullName>
        <label>Due date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fees_Percent_For_Upwork__c</fullName>
        <label>Fees Percent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>20</fullName>
                    <default>true</default>
                    <label>20</label>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fees_Percent__c</fullName>
        <label>Fees Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Finished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finished_by__c</fullName>
        <label>Finished by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Money_without_charges__c</fullName>
        <formula>IF( RecordType.Name = &quot;Upwork&quot;, IF( ISPICKVAL( Fees_Percent_For_Upwork__c , &quot;20&quot;) , ( Cost__c -(Cost__c * 20) / 100), IF(ISPICKVAL( Fees_Percent_For_Upwork__c , &quot;10&quot;), (Cost__c -(Cost__c * 10) / 100), IF(ISPICKVAL( Fees_Percent_For_Upwork__c , &quot;5&quot;), (Cost__c -(Cost__c * 5) / 100), 1) ) ), Cost__c -(Cost__c  *  Fees_Percent__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Money without charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organisation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit__c</fullName>
        <formula>Money_without_charges__c -  Developing_cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Upcoming</fullName>
                    <default>true</default>
                    <label>Upcoming</label>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Milestone</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Upwork</fullName>
        <active>true</active>
        <label>Upwork</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_Cost_on_negative_value</fullName>
        <active>true</active>
        <errorConditionFormula>Cost__c &lt;0</errorConditionFormula>
        <errorDisplayField>Cost__c</errorDisplayField>
        <errorMessage>Field value cannot be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Dates</fullName>
        <active>true</active>
        <errorConditionFormula>Start_date__c &lt;=  Due_date__c</errorConditionFormula>
        <errorMessage>Start date could not be more Due date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Developing_cost_on_negative_value</fullName>
        <active>true</active>
        <errorConditionFormula>Developing_cost__c &lt;0</errorConditionFormula>
        <errorDisplayField>Developing_cost__c</errorDisplayField>
        <errorMessage>Field value cannot be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>check_for_Sales_Percent</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Fees_Percent__c &gt;=100,Fees_Percent__c &lt; 0)</errorConditionFormula>
        <errorDisplayField>Fees_Percent__c</errorDisplayField>
        <errorMessage>Incorrect Sales Percent</errorMessage>
    </validationRules>
</CustomObject>